--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <div class="inicio">
     <div>
       <p class="tituloinicio">
-        BIENVENIDO A SANSEX</p>
+        BIENVENIDO A SANSE-X</p>
       <p class="tituloinicio2">¡Todo sobre <b>QUIMICA</b>, FACIL y ACCESIBLE!</p>
     </div>
     <img src="img/alumnos.png" alt="">
@@ -80,12 +80,12 @@
     RECURSOS</p>
 
   <div class="opciones">
-    <a href="go:BB01" class="opcion">
+    <a href="go:CPU00" class="opcion">
       <img src="img/cpu.png" alt="Opción 1">
       <span>CPU</span>
       <p style="font-size: 10px; margin: 0; color: rgb(155, 155, 155);">Examenes y Solucionarios</p>
     </a>
-    <a href="go:PRASEC" class="opcion">
+    <a href="go:VID00" class="opcion">
       <img src="img/vivo.png" alt="Opción 2">
       <span>VIDEO CLASES</span>
       <p style="font-size: 10px; margin: 0; color: rgb(155, 155, 155);">Clases en vivo y grabadas</p>
