--- a/index.html
+++ b/index.html
@@ -85,25 +85,31 @@
       <span>CPU</span>
       <p style="font-size: 10px; margin: 0; color: rgb(155, 155, 155);">Examenes y Solucionarios</p>
     </a>
+    <a href="go:ORD00" class="opcion">
+      <img src="img/ujfsc.png" alt="Opción 1">
+      <span>ORDINARIO</span>
+      <p style="font-size: 10px; margin: 0; color: rgb(155, 155, 155);">Examenes y Solucionarios</p>
+    </a>
     <a href="go:VID00" class="opcion">
       <img src="img/vivo.png" alt="Opción 2">
       <span>VIDEO CLASES</span>
       <p style="font-size: 10px; margin: 0; color: rgb(155, 155, 155);">Clases en vivo y grabadas</p>
 
     </a>
-    <!--
-    <a href="go:MISC" class="opcion">
-      <img src="img/foro.png" alt="Opción 3">
-      <span>EXPLORA Y PARTICIPA</span>
-      <p style="font-size: 10px; margin: 0; color: rgb(155, 155, 155);">Comparte tus conocimientos</p>
-
-    </a>
-    <a href="go:DESC" class="opcion">
-      <img src="img/descarga.png" alt="Opción 4">
-      <span>DESCARGAS</span>
+    
+    <a href="go:MAT00" class="opcion">
+      <img src="img/materiales.png" alt="Opción 3">
+      <span>MATERIALES EXTRA</span>
       <p style="font-size: 10px; margin: 0; color: rgb(155, 155, 155);">Obten acceso a nuestro contenido exclusivo</p>
 
     </a>
+    <a href="go:COM00" class="opcion">
+      <img src="img/comunidad.png" alt="Opción 4">
+      <span>COMUNIDAD</span>
+      <p style="font-size: 10px; margin: 0; color: rgb(155, 155, 155);">Comparte tus conocimientos</p>
+
+    </a>
+    <!--
     <a href="go:SUGE" class="opcion">
       <img src="img/sugerencias.png" alt="Opción 5">
       <span>SUGERENCIAS</span>
@@ -155,17 +161,17 @@
       <img src="img/lista.png" alt="Menu">
     </button>
     <div class="social-bubble facebook" id="facebook">
-      <a href="https://facebook.com" target="_blank">
+      <a href="https://www.facebook.com/profile.php?id=100095485354179" target="_blank">
         <img src="img/face.png" alt="Facebook">
       </a>
     </div>
     <div class="social-bubble youtube" id="youtube">
-      <a href="https://youtube.com" target="_blank">
+      <a href="https://www.youtube.com/@gustavololoymorales6609/featured" target="_blank">
         <img src="img/youtube.png" alt="YouTube">
       </a>
     </div>
     <div class="social-bubble tiktok" id="tiktok">
-      <a href="https://tiktok.com" target="_blank">
+      <a href="https://api.whatsapp.com/send?phone=51933089875&text=Hola!%20vengo%20de%20la%20app%20SANSE-X%20quisiera%20una%20asesoria%20personalizada%20por%20favor.%20%F0%9F%98%80" target="_blank">
         <img src="img/whatsapp.png" alt="TikTok">
       </a>
     </div>
