--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <span>ORDINARIO</span>
       <p style="font-size: 10px; margin: 0; color: rgb(155, 155, 155);">Examenes y Solucionarios</p>
     </a>
-    <a href="videoclass.html" class="opcion">
+    <a href="go:VID00" class="opcion">
       <img src="img/vivo.png" alt="Opción 2">
       <span>VIDEO CLASES</span>
       <p style="font-size: 10px; margin: 0; color: rgb(155, 155, 155);">Clases en vivo y grabadas</p>
