--- a/NewtonGeneral/politicaNER.html
+++ b/NewtonGeneral/politicaNER.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Política de Privacidad - WBNS Stickers y más</title>
+  <title>Política de Privacidad - CACHIMBO X</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -69,12 +69,12 @@
   </header>
 
   <main>
-    <h2>Newton en Red</h2>
-    <p>Esta política de privacidad explica cómo recopilamos, usamos y protegemos los datos personales de los usuarios de nuestra aplicación "Newton en Red". Al utilizar nuestra aplicación, aceptas los términos establecidos en esta política.</p>
+    <h2>CACHIMBO X</h2>
+    <p>Esta política de privacidad explica cómo recopilamos, usamos y protegemos los datos personales de los usuarios de nuestra aplicación "CACHIMBO X". Al utilizar nuestra aplicación, aceptas los términos establecidos en esta política.</p>
 
     <h2>Recopilación y uso de datos</h2>
     <ul>
-      <li>La app solicita al usuario que introduzca datos de carácter personal, como nombre de usuario, fecha de nacimiento, género y una foto de perfil.</li>
+      <li>La app solicita al usuario que introduzca datos de carácter personal, como nombre de usuario, descripción y una foto de perfil.</li>
       <li>Estos datos no se muestran a otros usuarios de la app.</li>
       <li>Los datos personales pueden compartirse con otras entidades o terceras organizaciones con fines de marketing y anuncios.</li>
     </ul>
@@ -94,7 +94,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 WBNS Stickers y más. Todos los derechos reservados.</p>
+    <p>&copy; 2025 CACHIMBO-X. Todos los derechos reservados.</p>
   </footer>
 </body>
 </html>
