--- a/NewtonGeneral/eliminarcuenta.html
+++ b/NewtonGeneral/eliminarcuenta.html
@@ -134,13 +134,13 @@ footer {
         <h2 id="step-title">Paso a paso para eliminar tu cuenta</h2>
       <div class="step">
         <h3 id="step1-title">Paso 1: Ir al perfil del usuario</h3>
-        <img src="https://i.ibb.co/mbTLw2t/02cb6ae2-e1d2-436a-913b-2dd572e6298d.jpg" alt="Ir al perfil" class="step-image">
+        <img src="https://i.ibb.co/K39MbbR/image.png" alt="Ir al perfil" class="step-image">
         <p id="step1-desc">Accede a tu perfil tocando o haciendo clic en tu avatar en la esquina superior derecha.</p>
       </div>
 
       <div class="step">
         <h3 id="step2-title">Paso 2: Desplazarse a la parte inferior del perfil</h3>
-        <img src="https://i.ibb.co/d7B0zhP/ac189bf0-2afe-4013-a63b-4c8e6556f19b.jpg" alt="Desplazarse abajo" class="step-image">
+        <img src="https://i.ibb.co/wrhMQMFJ/image.png" alt="Desplazarse abajo" class="step-image">
         <p id="step2-desc">Desliza o desplázate hacia abajo en tu perfil hasta llegar al final.</p>
       </div>
 
@@ -152,7 +152,7 @@ footer {
       
       <div class="step">
         <h3 id="step4-title">Paso 4: Responder "Sí"</h3>
-        <img src="https://i.ibb.co/rQ9T4gk/cce7db72-ea8f-4c5e-bba0-050eb4a879e1.jpg" alt="Confirmación de baja" class="step-image">
+        <img src="https://i.ibb.co/s8pSMqW/image.png" alt="Confirmación de baja" class="step-image">
         <p id="step4-desc">Cuando se te pregunte si deseas eliminar tu cuenta, responde "Sí" y tu cuenta será eliminada.</p>
       </div>
     </section>
