--- a/NewtonGeneral/politicaNER.html
+++ b/NewtonGeneral/politicaNER.html
@@ -74,7 +74,7 @@
 
     <h2>Recopilación y uso de datos</h2>
     <ul>
-      <li>La app solicita al usuario que introduzca datos de carácter personal, como nombre de usuario, descripción y una foto de perfil.</li>
+      <li>La app solicita al usuario que introduzca datos de carácter personal, como nombre de usuario, descripción, fecha de nacimiento (opcional), género( opcional) y una foto de perfil.</li>
       <li>Estos datos no se muestran a otros usuarios de la app.</li>
       <li>Los datos personales pueden compartirse con otras entidades o terceras organizaciones con fines de marketing y anuncios.</li>
     </ul>
