--- a/NewtonGeneral/practicaxcurso.html
+++ b/NewtonGeneral/practicaxcurso.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PracticaxCurso</title>
 </head>
 <style>
     body {
@@ -28,12 +28,13 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        padding: 20px;
+        padding: 10px;
         text-decoration: none;
         background: linear-gradient(135deg, #0050b1, #007bff8b);
         color: #fff;
         border-radius: 12px;
         transition: transform 0.3s ease, box-shadow 0.3s ease;
+        border: #505050 2px solid;
     }
 
     .opcion img {
@@ -141,11 +142,11 @@
             <span>Geometría</span>
         </a>
         <a href="#" class="opcion" data-modal="modal-trigonometria">
-            <img src="img/trigonometria.png" alt="Geometría">
+            <img src="img/trigonometria.png" alt="trigonometria">
             <span>Trigonometría</span>
         </a>
         <a href="#" class="opcion" data-modal="modal-estadistica">
-            <img src="img/estadistica.png" alt="Geometría">
+            <img src="img/estadistica.png" alt="estadistica">
             <span>Estadística</span>
         </a>
         <!------------------------BLOQUE B--------------------------->
