--- a/NewtonGeneral/testv.html
+++ b/NewtonGeneral/testv.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Pantalla inicial -->
     <div id="tutorial-screen" class="screen active">
-        <h2>Bienvenido al Test Vocacional de NEWTON EN RED</h2>
+        <h2>Bienvenido al Test Vocacional de CACHIMBO X</h2>
         <p>Descubre tu camino profesional contestando preguntas rápidas.</p>
         <img src="img/test.png" alt="Recomendaciones" style="max-width: 100%; height: auto;">
         <ul>
