--- a/NewtonGeneral/politicaNER.html
+++ b/NewtonGeneral/politicaNER.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Política de Privacidad - CACHIMBO X</title>
+  <title>Política de Privacidad - X-ACADEMY</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -69,8 +69,8 @@
   </header>
 
   <main>
-    <h2>CACHIMBO X</h2>
-    <p>Esta política de privacidad explica cómo recopilamos, usamos y protegemos los datos personales de los usuarios de nuestra aplicación "CACHIMBO X". Al utilizar nuestra aplicación, aceptas los términos establecidos en esta política.</p>
+    <h2>X-ACADEMY</h2>
+    <p>Esta política de privacidad explica cómo recopilamos, usamos y protegemos los datos personales de los usuarios de nuestra aplicación "X-ACADEMY". Al utilizar nuestra aplicación, aceptas los términos establecidos en esta política.</p>
 
     <h2>Recopilación y uso de datos</h2>
     <ul>
@@ -94,7 +94,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 CACHIMBO-X. Todos los derechos reservados.</p>
+    <p>&copy; 2025 X-ACADEMY. Todos los derechos reservados.</p>
   </footer>
 </body>
 </html>
