--- a/NewtonGeneral/eliminarcuenta.html
+++ b/NewtonGeneral/eliminarcuenta.html
@@ -134,13 +134,14 @@ footer {
         <h2 id="step-title">Paso a paso para eliminar tu cuenta</h2>
       <div class="step">
         <h3 id="step1-title">Paso 1: Ir al perfil del usuario</h3>
-        <img src="https://i.ibb.co/K39MbbR/image.png" alt="Ir al perfil" class="step-image">
+        
+        <img src="https://i.ibb.co/zVxr702f/image.png" alt="Ir al perfil" class="step-image">
         <p id="step1-desc">Accede a tu perfil tocando o haciendo clic en tu avatar en la esquina superior derecha.</p>
       </div>
 
       <div class="step">
         <h3 id="step2-title">Paso 2: Desplazarse a la parte inferior del perfil</h3>
-        <img src="https://i.ibb.co/wrhMQMFJ/image.png" alt="Desplazarse abajo" class="step-image">
+        <img src="https://i.ibb.co/27GxpmZ4/image.png" alt="Desplazarse abajo" class="step-image">
         <p id="step2-desc">Desliza o desplázate hacia abajo en tu perfil hasta llegar al final.</p>
       </div>
 
@@ -152,7 +153,7 @@ footer {
       
       <div class="step">
         <h3 id="step4-title">Paso 4: Responder "Sí"</h3>
-        <img src="https://i.ibb.co/s8pSMqW/image.png" alt="Confirmación de baja" class="step-image">
+        <img src="https://i.ibb.co/YBk9wNBw/image.png" alt="Confirmación de baja" class="step-image">
         <p id="step4-desc">Cuando se te pregunte si deseas eliminar tu cuenta, responde "Sí" y tu cuenta será eliminada.</p>
       </div>
     </section>
