--- a/NewtonGeneral/seleccionBloques.html
+++ b/NewtonGeneral/seleccionBloques.html
@@ -134,10 +134,11 @@
 
         .modal-content h3 {
             margin-top: 0;
+            text-decoration: underline;
         }
 
         .modal a {
-            display: block;
+            display: flex;
             margin: 0.5rem 0;
             color: #3b82f6;
             text-decoration: none;
@@ -177,42 +178,45 @@
     <!-- Modal por cada opción -->
     <div class="modal" id="popupModal0">
         <div class="modal-content">
-            <h3>Opción 1</h3>
-            <a href="#">Examen A1</a>
-            <a href="#">Examen A2</a>
-            <a href="#">Examen A3</a>
-            <a href="#">Examen A4</a>
-            <a href="#">Examen A5</a>
+            <h3>EXAMENES BLOQUE - A</h3>
+            <a href="go:A1">Examen A1</a>
+            <a href="go:A2">Examen A2</a>
+            <a href="go:A3">Examen A3</a>
+            <a href="go:PRX">Proximamente...</a>
+            <a href="go:PRX">Proximamente...</a>
             <button class="modal-close" onclick="closeModal(0)">Cerrar</button>
         </div>
     </div>
 
     <div class="modal" id="popupModal1">
         <div class="modal-content">
-            <h3>Opción 2</h3>
-            <a href="#">Material B1</a>
-            <a href="#">Material B2</a>
-            <a href="#">Material B3</a>
+            <h3>EXAMENES BLOQUE - B</h3>
+            <a href="go:B1">Examen B1</a>
+            <a href="go:B2">Examen B2</a>
+            <a href="go:B3">Examen B3</a>
+            <a href="go:PRX">Proximamente...</a>
             <button class="modal-close" onclick="closeModal(1)">Cerrar</button>
         </div>
     </div>
 
     <div class="modal" id="popupModal2">
         <div class="modal-content">
-            <h3>Opción 3</h3>
-            <a href="#">Recurso C1</a>
-            <a href="#">Recurso C2</a>
-            <a href="#">Recurso C3</a>
-            <a href="#">Recurso C4</a>
+            <h3>EXAMENES BLOQUE - C</h3>
+            <a href="go:C1">Examen C1</a>
+            <a href="go:C2">Examen C2</a>
+            <a href="go:C3">Examen C3</a>
+            <a href="go:PRX">Proximamente...</a>
             <button class="modal-close" onclick="closeModal(2)">Cerrar</button>
         </div>
     </div>
 
     <div class="modal" id="popupModal3">
         <div class="modal-content">
-            <h3>Opción 4</h3>
-            <a href="#">Guía D1</a>
-            <a href="#">Guía D2</a>
+            <h3>EXAMENES BLOQUE - D</h3>
+            <a href="go:D1">Examen D1</a>
+            <a href="go:D2">Examen D2</a>
+            <a href="go:D3">Examen D1</a>
+            <a href="go:PRX">Proximamente...</a>
             <button class="modal-close" onclick="closeModal(3)">Cerrar</button>
         </div>
     </div>
