--- a/NewtonGeneral/index.html
+++ b/NewtonGeneral/index.html
@@ -73,7 +73,7 @@
     </div>
     <img src="img/alumnos.png" alt="">
   </div>
-  <div class="projetos">
+  <!--<div class="projetos">
 
     <p>Anuncios</p>
 
@@ -101,7 +101,8 @@
 
     </section>
 
-  </div>
+  </div>-->
+  
   <p style="font-size: 20px; font-weight: 900; color: rgb(0, 73, 198); 
             font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
             border-bottom: 3px solid rgb(0, 73, 198); width: 95%; margin: 0 auto;">
