--- a/NewtonGeneral/index.html
+++ b/NewtonGeneral/index.html
@@ -126,12 +126,13 @@
       <p style="font-size: 10px; margin: 0; color: rgb(155, 155, 155);">Comparte tus conocimientos</p>
 
     </a>
-    <a href="go:DESC" class="opcion">
+    <!--<a href="go:DESC" class="opcion">
       <img src="img/descarga.png" alt="Opción 4">
       <span>DESCARGAS</span>
       <p style="font-size: 10px; margin: 0; color: rgb(155, 155, 155);">Obten acceso a nuestro contenido exclusivo</p>
 
-    </a>
+    </a>-->
+    
     <a href="go:SUGE" class="opcion">
       <img src="img/sugerencias.png" alt="Opción 5">
       <span>SUGERENCIAS</span>
