--- a/NewtonGeneral/index.html
+++ b/NewtonGeneral/index.html
@@ -41,7 +41,7 @@
     <section class="projetos-slider">
 
       <div>
-        <a href="#"><img src="img/demo2.jpg" alt="img1"></a>
+        <a href="testv.html"><img src="img/demo1.png" alt="img1"></a>
 
       </div>
 
