--- a/NewtonGeneral/index.html
+++ b/NewtonGeneral/index.html
@@ -46,7 +46,7 @@
       </div>
 
       <div>
-        <a href="#"><img src="img/demo2.jpg" alt="img2"></a>
+        <a href="go:PRX"><img src="img/demo3.png" alt="img2"></a>
 
       </div>
 
