--- a/NewtonGeneral/index.html
+++ b/NewtonGeneral/index.html
@@ -51,7 +51,7 @@
       </div>
 
       <div>
-        <a href="#"><img src="img/demo2.jpg" alt="img3"></a>
+        <a href="go:PRASEC"><img src="img/demo4.png" alt="img3"></a>
 
       </div>
 
