--- a/NewtonGeneral/practicaxcurso.html
+++ b/NewtonGeneral/practicaxcurso.html
@@ -314,7 +314,7 @@
                 <li><a href="go:ANA01">Tema 1: Tejido epitelial</a> </li>
                 <li><a href="go:ANA02">Tema 2: Tejido cartilaginoso - Tejido óseo</a></li>
                 <li><a href="go:ANA03">Tema 3: Tejido muscular</a></li>
-                <li><a href="go:PRX">Tema 4: Tejido nervioso</a></li>
+                <li><a href="go:ANA04">Tema 4: Tejido nervioso</a></li>
                 <li><a href="go:PRX">Tema 5: Tejido sanguíneo</a></li>
                 <li><a href="go:PRX">Tema 6: Aparato cardiovascular</a></li>
                 <li><a href="go:PRX">Tema 7: PROXIMAMENTE...</a></li>
