--- a/NewtonGeneral/index.html
+++ b/NewtonGeneral/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+
   <div id="offlineMessage">
     <div class="offline-content">
       <img src="img/conexion.png" alt="No conexión" class="offline-icon">
@@ -46,7 +47,7 @@
       </div>
 
       <div>
-        <a href="go:PRX"><img src="img/demo3.png" alt="img2"></a>
+        <a href="go:VID"><img src="img/demo3.png" alt="img2"></a>
 
       </div>
 
@@ -81,6 +82,12 @@
       <p style="font-size: 10px; margin: 0; color: rgb(155, 155, 155);">Vamos a repasar</p>
 
     </a>
+    <a href="go:CONT" class="opcion">
+      <img src="img/videos.png" alt="Opción 6">
+      <span>VIDEO CLASES</span>
+      <p style="font-size: 10px; margin: 0; color: rgb(155, 155, 155);">Videos por cursos / temas</p>
+
+    </a>
     <a href="go:MISC" class="opcion">
       <img src="img/foro.png" alt="Opción 3">
       <span>EXPLORA Y PARTICIPA</span>
@@ -99,14 +106,8 @@
       <p style="font-size: 10px; margin: 0; color: rgb(155, 155, 155);">Estamos para escucharte</p>
 
     </a>
-    <!--
-        <a href="go:CONT" class="opcion">
-      <img src="img/contactanos.png" alt="Opción 6">
-      <span>CONTACTANOS</span>
-      <p style="font-size: 10px; margin: 0; color: rgb(155, 155, 155);">Cualquier duda será respondida</p>
-
-    </a>
-    -->
+    
+    
 
   </div>
   
