--- a/NewtonGeneral/index.html
+++ b/NewtonGeneral/index.html
@@ -82,7 +82,7 @@
       <p style="font-size: 10px; margin: 0; color: rgb(155, 155, 155);">Vamos a repasar</p>
 
     </a>
-    <a href="go:CONT" class="opcion">
+    <a href="go:VID" class="opcion">
       <img src="img/videos.png" alt="Opción 6">
       <span>VIDEO CLASES</span>
       <p style="font-size: 10px; margin: 0; color: rgb(155, 155, 155);">Videos por cursos / temas</p>
