--- a/NewtonGeneral/cursos.html
+++ b/NewtonGeneral/cursos.html
@@ -152,7 +152,7 @@
 
     let cursosData = {
       algebra: [
-        { title: 'Teoria de Exponentes', video: 'https://www.youtube.com/embed/QTOF9_9LZSs?si=gwsP_gNTxXUs0xKM', pdf: '', practicaId: 'algebra-1' },
+        { title: 'Teoria de Exponentes', video: 'https://www.youtube.com/embed/QTOF9_9LZSs?si=gwsP_gNTxXUs0xKM', pdf: 'https://docs.google.com/forms/d/e/1FAIpQLScddkUe9v7aVg7Kr0m2rj1KJj70lJ2ooTMXkYIV3D2k8d9k4w/viewform?embedded=true', practicaId: 'algebra-1' },
         { title: 'Polinomios', video: 'https://www.youtube.com/embed/tnf_wQ7-_Pw?si=K0RIw_ykte6GlU4i', pdf: '', practicaId: 'algebra-2' },
         { title: 'Productos Notables', video: 'https://www.youtube.com/embed/G-ym95yl3Es?si=KFhxUXzbSZDOqsFH', pdf: '', practicaId: 'algebra-3' },
         { title: 'División de polinomios', video: 'https://www.youtube.com/embed/6', pdf: '', practicaId: 'algebra-2' },
@@ -173,7 +173,7 @@
       ],
       estadistica: [
         { title: 'Tablas de distribución - I', video: 'https://www.youtube.com/embed/BGrB4raG2rA?si=VLqsBtggYU_IuVud', pdf: '', practicaId: 'aritmetica-1' },
-        { title: 'Tablas de distribución - II', video: 'https://www.youtube.com/embed/9', pdf: '', practicaId: 'aritmetica-2' },
+        { title: 'Tablas de distribución - II', video: 'https://www.youtube.com/embed/D2cs5rBynkA?si=qUkjxoou78JbOEtE', pdf: '', practicaId: 'aritmetica-2' },
       ],
       anatomia: [
         { title: 'Tejido epitelial', video: 'https://www.youtube.com/embed/10', pdf: '', practicaId: 'anatomia-1' },
