--- a/NewtonGeneral/cursos.html
+++ b/NewtonGeneral/cursos.html
@@ -152,16 +152,17 @@
 
     let cursosData = {
       algebra: [
-        { title: 'Teoria de Exponentes', video: 'https://www.youtube.com/embed/QTOF9_9LZSs?si=gwsP_gNTxXUs0xKM', pdf: 'https://docs.google.com/forms/d/e/1FAIpQLScddkUe9v7aVg7Kr0m2rj1KJj70lJ2ooTMXkYIV3D2k8d9k4w/viewform?embedded=true', practicaId: 'algebra-1' },
+        { title: 'Teoria de Exponentes', video: 'https://www.youtube.com/embed/QTOF9_9LZSs?si=gwsP_gNTxXUs0xKM', pdf: '', practicaId: 'algebra-1' },
         { title: 'Polinomios', video: 'https://www.youtube.com/embed/tnf_wQ7-_Pw?si=K0RIw_ykte6GlU4i', pdf: '', practicaId: 'algebra-2' },
         { title: 'Productos Notables', video: 'https://www.youtube.com/embed/G-ym95yl3Es?si=KFhxUXzbSZDOqsFH', pdf: '', practicaId: 'algebra-3' },
-        { title: 'División de polinomios', video: 'https://www.youtube.com/embed/6', pdf: '', practicaId: 'algebra-2' },
-        { title: 'Cocientes Notables', video: 'https://www.youtube.com/embed/6', pdf: '', practicaId: 'algebra-2' },
-        { title: 'Factorización', video: 'https://www.youtube.com/embed/6', pdf: '', practicaId: 'algebra-2' },
+        { title: 'División de polinomios', video: 'https://www.youtube.com/embed/63y_SGwAoV4?si=B3VYnb_x6wpbJ-fO', pdf: '', practicaId: 'algebra-4' },
+        { title: 'Cocientes Notables', video: 'https://www.youtube.com/embed/Bqm4_wfIOiU?si=SVk8z-gWWBkxN1uX', pdf: '', practicaId: 'algebra-5' },
+        { title: 'Factorización', video: 'https://www.youtube.com/embed/-tS50MayXiE?si=5HV9KNcve6YqHy4S', pdf: '', practicaId: 'algebra-6' },
       ],
       aritmetica: [
-        { title: 'Lógica proposicional', video: 'https://www.youtube.com/embed/8', pdf: '', practicaId: 'aritmetica-1' },
-        { title: 'Teoría de conjuntos', video: 'https://www.youtube.com/embed/9', pdf: '', practicaId: 'aritmetica-2' },
+        { title: 'Lógica proposicional', video: 'https://www.youtube.com/embed/3I5OJTPyKRY?si=wEkg0MJUOEzgUnmy', pdf: '', practicaId: 'aritmetica-1' },
+        { title: 'Teoría de conjuntos', video: 'https://www.youtube.com/embed/PvfmttWrGM0?si=GX22tMz1piJC4ojt', pdf: '', practicaId: 'aritmetica-2' },
+        { title: 'Criterios de Divisibilidad', video: 'https://www.youtube.com/embed/vLWiNb8jLgY?si=DmBbxuzpx9Ng36B7', pdf: '', practicaId: 'aritmetica-3' },
       ],
       geometria: [
         { title: 'Segmentos - Ángulos', video: 'https://www.youtube.com/embed/8', pdf: '', practicaId: 'aritmetica-1' },
