--- a/NewtonGeneral/cursos.html
+++ b/NewtonGeneral/cursos.html
@@ -162,19 +162,20 @@
       aritmetica: [
         { title: 'Lógica proposicional', video: 'https://www.youtube.com/embed/3I5OJTPyKRY?si=wEkg0MJUOEzgUnmy', pdf: '', practicaId: 'aritmetica-1' },
         { title: 'Teoría de conjuntos', video: 'https://www.youtube.com/embed/PvfmttWrGM0?si=GX22tMz1piJC4ojt', pdf: '', practicaId: 'aritmetica-2' },
-        { title: 'Criterios de Divisibilidad', video: 'https://www.youtube.com/embed/vLWiNb8jLgY?si=DmBbxuzpx9Ng36B7', pdf: '', practicaId: 'aritmetica-3' },
+        { title: 'Numeración', video: 'https://www.youtube.com/embed/WuS487rpc5Q?si=Wj93seUpywS1Q85w', pdf: '', practicaId: 'aritmetica-3' },
+        { title: 'Criterios de Divisibilidad', video: 'https://www.youtube.com/embed/vLWiNb8jLgY?si=DmBbxuzpx9Ng36B7', pdf: '', practicaId: 'aritmetica-4' },
       ],
       geometria: [
-        { title: 'Segmentos - Ángulos', video: 'https://www.youtube.com/embed/8', pdf: '', practicaId: 'aritmetica-1' },
-        { title: 'Triángulos', video: 'https://www.youtube.com/embed/9', pdf: '', practicaId: 'aritmetica-2' },
+        { title: 'Segmentos - Ángulos', video: 'https://www.youtube.com/embed/8', pdf: '', practicaId: 'geometria-1' },
+        { title: 'Triángulos', video: 'https://www.youtube.com/embed/9', pdf: '', practicaId: 'geometria-2' },
       ],
       trigonometria: [
-        { title: 'Sistema de medida angular - Sector circular', video: 'https://www.youtube.com/embed/8', pdf: '', practicaId: 'aritmetica-1' },
-        { title: 'Razones trigonométricas de ángulos agudos', video: 'https://www.youtube.com/embed/9', pdf: '', practicaId: 'aritmetica-2' },
+        { title: 'Sistema de medida angular - Sector circular', video: 'https://www.youtube.com/embed/8', pdf: '', practicaId: 'trigonometria-1' },
+        { title: 'Razones trigonométricas de ángulos agudos', video: 'https://www.youtube.com/embed/9', pdf: '', practicaId: 'trigonometria-2' },
       ],
       estadistica: [
-        { title: 'Tablas de distribución - I', video: 'https://www.youtube.com/embed/BGrB4raG2rA?si=VLqsBtggYU_IuVud', pdf: '', practicaId: 'aritmetica-1' },
-        { title: 'Tablas de distribución - II', video: 'https://www.youtube.com/embed/D2cs5rBynkA?si=qUkjxoou78JbOEtE', pdf: '', practicaId: 'aritmetica-2' },
+        { title: 'Tablas de distribución - I', video: 'https://www.youtube.com/embed/BGrB4raG2rA?si=VLqsBtggYU_IuVud', pdf: '', practicaId: 'estadistica-1' },
+        { title: 'Tablas de distribución - II', video: 'https://www.youtube.com/embed/D2cs5rBynkA?si=qUkjxoou78JbOEtE', pdf: '', practicaId: 'estadistica-2' },
       ],
       anatomia: [
         { title: 'Tejido epitelial', video: 'https://www.youtube.com/embed/10', pdf: '', practicaId: 'anatomia-1' },
@@ -184,10 +185,14 @@
     };
 
     let practicasData = {
-      'algebra-1': [{ text: 'Examen 1 de Álgebra Básica', link: 'go:ALB1' }, { text: 'Quiz de Ecuaciones', link: 'go:QUIZ_ECUACIONES' }],
-      'algebra-2': [{ text: 'Examen 2 de Factorización', link: 'go:ALB2' }],
-      'algebra-3': [{ text: 'Examen 3 de Productos Notables', link: 'go:ALB3' }],
-      'aritmetica-1': [{ text: 'Test 1 de Suma y Resta', link: 'go:ARI1' }],
+      'algebra-1': [{ text: 'Practica de Teoria de Exponentes', link: 'go:ALG01' },],
+      'algebra-2': [{ text: 'Practica de Polinomios', link: 'go:ALG02' }],
+      'algebra-3': [{ text: 'Practica de Productos Notables', link: 'go:ALG03' }],
+      'aritmetica-1': [{ text: 'Practica de Logica proposicional', link: 'go:ARIT01' }],
+      'aritmetica-2': [{ text: 'Practica de Teoria de Conjuntos', link: 'go:ARIT02' }],
+      'aritmetica-3': [{ text: 'Practica de Numeración', link: 'go:ARIT03' }],
+      'estadistica-1': [{ text: 'Practica de Tablas I', link: 'go:EST01' }],
+      'estadistica-2': [{ text: 'Practica de Tablas II', link: 'go:EST02' }],
       'anatomia-1': [{ text: 'Quiz de huesos', link: 'go:ANA1' }],
       // Agrega más prácticas según tus practicaId
     };
