--- a/NewtonGeneral/cursos.html
+++ b/NewtonGeneral/cursos.html
@@ -166,20 +166,21 @@
         { title: 'Criterios de Divisibilidad', video: 'https://www.youtube.com/embed/vLWiNb8jLgY?si=DmBbxuzpx9Ng36B7', pdf: '', practicaId: 'aritmetica-4' },
       ],
       geometria: [
-        { title: 'Segmentos - Ángulos', video: 'https://www.youtube.com/embed/8', pdf: '', practicaId: 'geometria-1' },
-        { title: 'Triángulos', video: 'https://www.youtube.com/embed/9', pdf: '', practicaId: 'geometria-2' },
+        { title: 'Segmentos - Ángulos', video: 'https://www.youtube.com/embed/II89moaL214?si=me6SdzFGNK69JPY2', pdf: '', practicaId: 'geometria-1' },
+        { title: 'Triángulos', video: 'https://www.youtube.com/embed/sRD54NtabPM?si=P4vEl2sF-2IRfElL', pdf: '', practicaId: 'geometria-2' },
       ],
       trigonometria: [
-        { title: 'Sistema de medida angular - Sector circular', video: 'https://www.youtube.com/embed/8', pdf: '', practicaId: 'trigonometria-1' },
-        { title: 'Razones trigonométricas de ángulos agudos', video: 'https://www.youtube.com/embed/9', pdf: '', practicaId: 'trigonometria-2' },
+        { title: 'Sistema de medida angular - Sector circular', video: 'https://www.youtube.com/embed/lpCYh33U18I?si=8fbvbG9wi24av1cP', pdf: '', practicaId: 'trigonometria-1' },
+        { title: 'Razones trigonométricas de ángulos agudos', video: 'https://www.youtube.com/embed/rj0kkRM-JsM?si=B9BjRetRL-1rKFVW', pdf: '', practicaId: 'trigonometria-2' },
       ],
       estadistica: [
         { title: 'Tablas de distribución - I', video: 'https://www.youtube.com/embed/BGrB4raG2rA?si=VLqsBtggYU_IuVud', pdf: '', practicaId: 'estadistica-1' },
         { title: 'Tablas de distribución - II', video: 'https://www.youtube.com/embed/D2cs5rBynkA?si=qUkjxoou78JbOEtE', pdf: '', practicaId: 'estadistica-2' },
       ],
       anatomia: [
-        { title: 'Tejido epitelial', video: 'https://www.youtube.com/embed/10', pdf: '', practicaId: 'anatomia-1' },
-        { title: 'Tejido cartilaginoso - Tejido óseo', video: 'https://www.youtube.com/embed/11', pdf: 'https://www.w3', practicaId: 'anatomia-2' },
+        { title: 'Tejido Epitelial', video: 'https://www.youtube.com/embed/o77bu0QsQqQ?si=7u93OjhImACBUGA3', pdf: '', practicaId: 'anatomia-1' },
+        { title: 'Tejido óseo', video: 'https://www.youtube.com/embed/iPSqE5Hld-E?si=W77QiDHRwQ4g7Rph', pdf: '', practicaId: 'anatomia-2' },
+        { title: 'Tejido cartilaginoso', video: 'https://www.youtube.com/embed/meUDcJrC6v8?si=Vx-rKIJ_E_ovuqGm', pdf: '', practicaId: 'anatomia-3' },
       ],
       // Agrega más cursos y temas aquí
     };
