--- a/NewtonGeneral/practicaxcurso.html
+++ b/NewtonGeneral/practicaxcurso.html
@@ -533,11 +533,11 @@
             <h2>Economía</h2>
             <ul>
                 <li><a href="go:ECO01">Tema 1: La ciencia económica</a> </li>
-                <li><a href="go:ECO02">Tema 2: Evolución histórica de la economía</a></li>
-                <li><a href="go:ECO03">Tema 3: Necesidades humanas, bienes y servicios</a></li>
-                <li><a href="go:PRX">Tema 4: Procesos económicos</a></li>
-                <li><a href="go:PRX">Tema 5: Factores clásicos de la producción</a></li>
-                <li><a href="go:PRX">Tema 6: La producción</a></li>
+                <li><a href="go:ECO02">Tema 2: Necesidades humanas, bienes y servicios</a></li>
+                <li><a href="go:ECO03">Tema 3: Procesos económicos</a></li>
+                <li><a href="go:PRX">Tema 4: Factores clásicos de la producción</a></li>
+                <li><a href="go:PRX">Tema 5: La producción</a></li>
+                <li><a href="go:PRX">Tema 6: PROXIMAMENTE...</a></li>
                 <li><a href="go:PRX">Tema 7: PROXIMAMENTE...</a></li>
                 <li><a href="go:PRX">Tema 8: PROXIMAMENTE...</a></li>
                 <li><a href="go:PRX">Tema 9: PROXIMAMENTE...</a></li>
