--- a/NewtonGeneral/cursos.html
+++ b/NewtonGeneral/cursos.html
@@ -153,7 +153,7 @@
     let cursosData = {
       algebra: [
         { title: 'Teoria de Exponentes', video: 'https://www.youtube.com/embed/QTOF9_9LZSs?si=gwsP_gNTxXUs0xKM', pdf: '', practicaId: 'algebra-1' },
-        { title: 'Polinomios', video: 'https://www.youtube.com/embed/tnf_wQ7-_Pw?si=K0RIw_ykte6GlU4i', pdf: '', practicaId: 'algebra-2' },
+        { title: 'Polinomios', video: 'https://www.youtube.com/embed/tnf_wQ7-_Pw?si=K0RIw_ykte6GlU4i', pdf: 'https://pdf.e-droid.net/pdf/d3559601-35258041-polinomios.pdf?v=0', practicaId: 'algebra-2' },
         { title: 'Productos Notables', video: 'https://www.youtube.com/embed/G-ym95yl3Es?si=KFhxUXzbSZDOqsFH', pdf: '', practicaId: 'algebra-3' },
         { title: 'División de polinomios', video: 'https://www.youtube.com/embed/63y_SGwAoV4?si=B3VYnb_x6wpbJ-fO', pdf: '', practicaId: 'algebra-4' },
         { title: 'Cocientes Notables', video: 'https://www.youtube.com/embed/Bqm4_wfIOiU?si=SVk8z-gWWBkxN1uX', pdf: '', practicaId: 'algebra-5' },
